# microsandbox

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile.agentd  README.md  SELF_HOSTING.md  USE_CASE.md  justfile  rust_examples.md
.github/vet/: exceptions.yml
.github/workflows/: check.yml  release.yml  test.yml  vet-ci.yml
crates/agentd/: Cargo.toml
crates/agentd/lib/: agent.rs  clock.rs  error.rs  fs.rs  heartbeat.rs  init.rs  lib.rs  network.rs  serial.rs  session.rs  tls.rs
crates/cli/: Cargo.toml
crates/cli/lib/: lib.rs  log_args.rs  sandbox_cmd.rs  styles.rs  tree.rs  ui.rs
crates/cli/lib/commands/: common.rs  create.rs  exec.rs  image.rs  inspect.rs  install.rs  list.rs  metrics.rs  mod.rs  ps.rs  pull.rs  registry.rs  remove.rs  run.rs  self_cmd.rs  shell.rs  start.rs  stop.rs  uninstall.rs  volume.rs
crates/db/: Cargo.toml
crates/db/lib/: lib.rs
crates/db/lib/entity/: config.rs  image.rs  index.rs  layer.rs  manifest.rs  manifest_layer.rs  mod.rs  run.rs  sandbox.rs  sandbox_image.rs  sandbox_metric.rs  snapshot.rs  volume.rs
crates/filesystem/: Cargo.toml  README.md  build.rs
crates/filesystem/lib/: agentd.rs  lib.rs
crates/filesystem/lib/backends/: mod.rs
crates/filesystem/lib/backends/dualfs/: builder.rs  create_ops.rs  dir_ops.rs  file_ops.rs  hooks.rs  lookup.rs  materialize.rs  metadata.rs  mod.rs  policy.rs  remove_ops.rs  special.rs  types.rs  xattr_ops.rs
crates/filesystem/lib/backends/dualfs/policies/: backend_a_fallback_to_backend_b.rs  backend_a_only.rs  merge_reads.rs  mod.rs  read_backend_b_write_backend_a.rs
crates/filesystem/lib/backends/dualfs/tests/: mod.rs  test_bootstrap.rs  test_concurrency.rs  test_create_ops.rs  test_dir_ops.rs  test_file_ops.rs  test_hooks.rs  test_init_binary.rs  test_integration.rs  test_lookup.rs  test_materialize.rs  test_metadata.rs  test_policies.rs  test_remove_ops.rs  test_rename.rs  test_special_ops.rs  test_whiteouts.rs  test_xattr.rs
crates/filesystem/lib/backends/memfs/: builder.rs  create_ops.rs  dir_ops.rs  file_ops.rs  inode.rs  metadata.rs  mod.rs  remove_ops.rs  special.rs  types.rs  xattr_ops.rs
crates/filesystem/lib/backends/memfs/tests/: mod.rs  test_bootstrap.rs  test_capacity.rs  test_concurrency.rs  test_create_ops.rs  test_dir_ops.rs  test_file_ops.rs  test_init_binary.rs  test_lookup.rs  test_metadata.rs  test_refcount.rs  test_remove_ops.rs  test_rename.rs  test_special_ops.rs  test_xattr.rs
crates/filesystem/lib/backends/overlayfs/: builder.rs  copy_up.rs  create_ops.rs  dir_ops.rs  file_ops.rs  inode.rs  layer.rs  metadata.rs  mod.rs  origin.rs  remove_ops.rs  special.rs  types.rs  whiteout.rs  xattr_ops.rs
crates/filesystem/lib/backends/overlayfs/tests/: mod.rs  test_bootstrap.rs  test_create_ops.rs  test_file_ops.rs  test_index.rs  test_lookup.rs  test_metadata.rs  test_multi_layer.rs  test_read_only.rs  test_readdir.rs  test_remove_ops.rs  test_rename.rs  test_special_ops.rs  test_xattr.rs
crates/filesystem/lib/backends/passthroughfs/: builder.rs  create_ops.rs  dir_ops.rs  file_ops.rs  inode.rs  metadata.rs  mod.rs  remove_ops.rs  special.rs  xattr_ops.rs
crates/filesystem/lib/backends/passthroughfs/tests/: mod.rs  test_bootstrap.rs  test_concurrency.rs  test_config.rs  test_corrupt_xattr.rs  test_create_ops.rs  test_dir_ops.rs  test_file_ops.rs  test_flag_translation.rs  test_init_binary.rs  test_kill_priv.rs  test_lookup_inode.rs  test_metadata.rs  test_name_validation.rs  test_open_after_unlink.rs  test_remove_ops.rs  test_special_ops.rs  test_vol_lookup.rs  test_xattr_ops.rs
crates/filesystem/lib/backends/shared/: handle_table.rs  init_binary.rs  inode_table.rs  mod.rs  name_validation.rs  platform.rs  stat_override.rs
crates/image/: Cargo.toml  README.md
crates/microsandbox/: Cargo.toml  README.md  build.rs
crates/microsandbox/lib/: error.rs  lib.rs
crates/microsandbox/lib/agent/: client.rs  mod.rs
crates/microsandbox/lib/config/: mod.rs
crates/microsandbox/lib/db/: mod.rs
crates/microsandbox/lib/image/: mod.rs
crates/microsandbox/lib/runtime/: handle.rs  mod.rs  spawn.rs
crates/microsandbox/lib/sandbox/: attach.rs  builder.rs  config.rs  exec.rs  fs.rs  handle.rs  metrics.rs  mod.rs  patch.rs  types.rs
crates/microsandbox/lib/setup/: download.rs  mod.rs  verify.rs
crates/microsandbox/lib/volume/: fs.rs  mod.rs
crates/migration/: Cargo.toml
crates/migration/lib/: lib.rs  m20260305_000001_create_image_tables.rs  m20260305_000002_create_sandbox_tables.rs  m20260305_000003_create_storage_tables.rs  m20260305_000004_create_sandbox_images_table.rs
crates/network/: Cargo.toml
crates/network/lib/: backend.rs  builder.rs  config.rs  conn.rs  device.rs  icmp_relay.rs  lib.rs  network.rs  proxy.rs  publisher.rs  shared.rs  stack.rs  udp_relay.rs
crates/network/lib/dns/: interceptor.rs  mod.rs
crates/network/lib/policy/: mod.rs  types.rs
crates/network/lib/secrets/: config.rs  handler.rs  mod.rs
crates/network/lib/tls/: ca.rs  certgen.rs  config.rs  mod.rs  proxy.rs  sni.rs  state.rs
crates/protocol/: Cargo.toml
crates/protocol/lib/: codec.rs  core.rs  error.rs  exec.rs  fs.rs  heartbeat.rs  lib.rs  message.rs
crates/runtime/: Cargo.toml
crates/term-interactive/: Cargo.toml
crates/utils/: Cargo.toml
crates/utils/lib/: lib.rs  size.rs  wake_pipe.rs
crates/utils/lib/index/: mod.rs  reader.rs  types.rs  writer.rs
docs/: docs.json  index.md  introduction.mdx  quickstart.mdx
examples/: README.md
examples/rust/net-secrets/: Cargo.toml
microsandbox-utils/: Cargo.toml
microsandbox-utils/lib/: term.rs
scripts/: install.sh
sdk/node-ts/: .gitignore  Cargo.toml  README.md  examples.md  index.cjs  index.d.cts  index.d.ts  index.mjs  package-lock.json  package.json  postinstall.js
sdk/node-ts/lib/: error.rs  exec.rs  fs.rs  helpers.rs  lib.rs  metrics.rs  sandbox.rs  sandbox_handle.rs  setup.rs  types.rs  volume.rs
sdk/node-ts/npm/darwin-arm64/: package.json
sdk/node-ts/npm/linux-arm64-gnu/: package.json
sdk/node-ts/npm/linux-x64-gnu/: package.json
(+82 files in other folders)
