[workspace]
resolver = "3"
exclude = ["crates/agentd"]
members = [
    "crates/cli",
    "crates/db",
    "crates/filesystem",
    "crates/image",
    "crates/microsandbox",
    "crates/migration",
    "crates/protocol",
    "crates/runtime",
    "crates/utils",
    "examples/rust/net-basic",
    "examples/rust/net-dns",
    "examples/rust/net-policy",
    "examples/rust/net-ports",
    "examples/rust/net-secrets",
    "examples/rust/net-tls",
    "examples/rust/root-bind",
    "examples/rust/root-block",
    "examples/rust/root-oci",
    "examples/rust/rootfs-patch",
    "examples/rust/volume-named",
    "sdk/node-ts",
]

[workspace.package]
authors = ["Team MicroSandbox <team@microsandbox.dev>"]
repository = "https://github.com/superradcompany/microsandbox"
version = "0.3.7"
license = "Apache-2.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[workspace.dependencies]
anyhow = "1.0"
astral-tokio-tar = "0.5.6"
async-compression = "0.4"
bytes = "1.9"
crc32c = "0.6"
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
clap = { version = "4.5", features = ["color", "derive"] }
console = "0.16"
crossbeam-queue = "0.3"
crossterm = { version = "0.29.0", features = ["events"] }
dirs = "6.0"
etherparse = "0.19"
flate2 = "1.0"
futures = "0.3"
hex = "0.4"
hickory-proto = "0.25"
hickory-resolver = "0.25"
indicatif = "0.18"
ipnetwork = { version = "0.21.0", features = ["serde"] }
libc = "0.2"
nix = "0.30"
oci-client = "0.15"
oci-spec = "0.8"
rand = "0.9"
reqwest = { version = "0.13", features = ["json", "stream"] }
scopeguard = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
sha2 = "0.10"
smoltcp = { version = "0.13", default-features = false }
tar = "0.4"
time = "0.3"
tempfile = "3.15"
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = "0.3"
typed-builder = "0.23"
which = "8"
xattr = "1.3"
sea-orm = { version = "1.1", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
sea-orm-migration = { version = "1.1", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
ureq = "3"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
rustls-native-certs = "0.8"
rcgen = { version = "0.13", features = ["x509-parser"] }
lru = "0.12"
rpassword = "7"
