[package]
name = "microsandbox-utils"
description = "`microsandbox-utils` is a library containing general utilities for the microsandbox project."
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "microsandbox_utils"
path = "lib/lib.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
typed-path.workspace = true
pretty-error-debug.workspace = true
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
nix = { workspace = true, features = ["process", "signal", "term", "fs"] }
tracing.workspace = true
libc.workspace = true
indicatif.workspace = true
console.workspace = true
dirs.workspace = true
term-interactive.workspace = true

[dev-dependencies]
tempfile.workspace = true
