[workspace]
resolver = "3"
members = ["."]

[workspace.package]
authors = ["Team MicroSandbox <team@microsandbox.dev>"]
repository = "https://github.com/superradcompany/microsandbox"
version = "0.3.7"
license = "Apache-2.0"
edition = "2024"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
libc = "0.2"
nix = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.42", default-features = false }

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"

[package]
name = "microsandbox-agentd"
description = "Guest init process and agent daemon for microsandbox microVMs."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "agentd"
path = "bin/main.rs"

[lib]
path = "lib/lib.rs"

[dependencies]
chrono.workspace = true
ciborium.workspace = true
libc.workspace = true
microsandbox-protocol = { version = "0.3.7", path = "../protocol" }
nix = { workspace = true, features = [
    "fs",
    "hostname",
    "mount",
    "process",
    "signal",
    "term",
] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "process",
    "rt",
    "signal",
    "sync",
    "time",
] }
