[package]
name = "microsandbox-cli"
description = "CLI binary for managing microsandbox environments."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "msb"
path = "bin/main.rs"

[lib]
name = "microsandbox_cli"
path = "lib/lib.rs"

[features]
default = ["prebuilt", "net"]
prebuilt = ["microsandbox/prebuilt", "microsandbox-runtime/prebuilt"]
net = ["dep:microsandbox-network", "microsandbox/net", "microsandbox-runtime/net"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
console.workspace = true
dirs.workspace = true
indicatif.workspace = true
libc.workspace = true
microsandbox = { version = "0.3.7", path = "../microsandbox", default-features = false }
microsandbox-image = { version = "0.3.7", path = "../image" }
microsandbox-network = { version = "0.3.7", path = "../network", optional = true }
microsandbox-runtime = { version = "0.3.7", path = "../runtime", default-features = false }
microsandbox-utils = { version = "0.3.7", path = "../utils" }
rand.workspace = true
reqwest.workspace = true
rpassword.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
