[package]
name = "microsandbox-migration"
description = "Database migrations for the microsandbox project."
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "microsandbox_migration"
path = "lib/lib.rs"

[dependencies]
sea-orm-migration.workspace = true
