[package]
name = "microsandbox-network"
description = "Networking types and smoltcp engine for the microsandbox project."
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "lib/lib.rs"

[dependencies]
bytes = { workspace = true }
crossbeam-queue = { workspace = true }
dirs = { workspace = true }
hickory-proto = { workspace = true }
hickory-resolver = { workspace = true }
ipnetwork = { workspace = true }
libc = { workspace = true }
lru = { workspace = true }
microsandbox-utils = { version = "0.3.7", path = "../utils" }
msb_krun = { version = "0.1.9", features = ["net"] }
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
smoltcp = { workspace = true, features = [
    "medium-ethernet",
    "proto-ipv4",
    "proto-ipv6",
    "socket-tcp",
    "socket-udp",
    "socket-icmp",
    "socket-dns",
    "async",
    "alloc",
] }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
