[package]
name = "net-secrets"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "net-secrets"
path = "bin/main.rs"

[dependencies]
microsandbox = { path = "../../../crates/microsandbox" }
microsandbox-network = { path = "../../../crates/network" }
tokio = { version = "1.42", features = ["full"] }
